# c_compile_test_cmake

./: CMakeLists.txt  Makefile  readme.md
app/: CMakeLists.txt  inverter.c  new.c  new.cpp
pylib_test/: basic_func.py  basic_function.c
